Fixed hover state on mobile devices for evidence
Also adjusted notification messages

--- a/main.css
+++ b/main.css
@@ -126,12 +126,20 @@ h2 {
 	font-size: 22px;
 }
 
-#checkboxes input[type="checkbox"]:hover + label, #ghost_info input[type="checkbox"]:hover + label {
+/*#checkboxes input[type="checkbox"]:hover + label, #ghost_info input[type="checkbox"]:hover + label {
 	background-color: #f41f86;
-}
+}*/
 
 #checkboxes input[type="checkbox"]:checked + label, #ghost_info input[type="checkbox"]:checked + label {
 	background: #f41f86;
+}
+
+#checkboxes input[type="checkbox"]:unchecked + label, #ghost_info input[type="checkbox"]:unchecked + label {
+	background: red;
+}
+
+#checkboxes input[type="checkbox"]:focus + label, #checkboxes input[type="checkbox"]:active + label {
+	background: red;
 }
 
 #ghosts {
